WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
208206
Tests should each use a unique ResourceLoadStatistics file path for its database store
https://bugs.webkit.org/show_bug.cgi?id=208206
Summary
Tests should each use a unique ResourceLoadStatistics file path for its datab...
Kate Cheney
Reported
2020-02-25 09:40:29 PST
This is causing issues with tests trying to delete file paths for databases which are still in use
Attachments
Patch
(9.95 KB, patch)
2020-02-25 11:10 PST
,
Kate Cheney
no flags
Details
Formatted Diff
Diff
Patch
(11.83 KB, patch)
2020-02-25 17:54 PST
,
Kate Cheney
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Kate Cheney
Comment 1
2020-02-25 09:41:42 PST
<
rdar://problem/59690272
>
Kate Cheney
Comment 2
2020-02-25 11:10:22 PST
Created
attachment 391672
[details]
Patch
Alexey Proskuryakov
Comment 3
2020-02-25 14:55:34 PST
Comment on
attachment 391672
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=391672&action=review
> Source/WebKit/ChangeLog:13 > + WebKitTestRunner. This was causing crashes and concurrency issues in tests > + when multiple database stores at the same path are accessed > + simultaneously.
I'll leave it to someone who knows this code to review the patch, but this is exciting!
> Source/WebKit/NetworkProcess/Classifier/WebResourceLoadStatisticsStore.cpp:180 > - // FIXME(193297): This should be revised after the UIProcess version goes away. > - m_statisticsStore->didCreateNetworkProcess(); > - }); > + // FIXME(193297): This should be revised after the UIProcess version goes away.
Bug 193297
is marked as fixed, it would be helpful to update this comment with what needs to be done. Not required for this patch, but you touched the line.
Alexey Proskuryakov
Comment 4
2020-02-25 14:55:42 PST
(also, API tests failed)
Kate Cheney
Comment 5
2020-02-25 17:54:12 PST
Created
attachment 391708
[details]
Patch
Kate Cheney
Comment 6
2020-02-25 17:54:33 PST
(In reply to Alexey Proskuryakov from
comment #4
)
> (also, API tests failed)
This patch should fix it.
Kate Cheney
Comment 7
2020-02-25 17:55:35 PST
(In reply to Alexey Proskuryakov from
comment #3
)
> Comment on
attachment 391672
[details]
> Patch > > View in context: >
https://bugs.webkit.org/attachment.cgi?id=391672&action=review
> > > Source/WebKit/ChangeLog:13 > > + WebKitTestRunner. This was causing crashes and concurrency issues in tests > > + when multiple database stores at the same path are accessed > > + simultaneously. > > I'll leave it to someone who knows this code to review the patch, but this > is exciting!
I know! I think this will solve many of the DB flaky test issues.
WebKit Commit Bot
Comment 8
2020-02-26 14:44:08 PST
Comment on
attachment 391708
[details]
Patch Clearing flags on attachment: 391708 Committed
r257519
: <
https://trac.webkit.org/changeset/257519
>
WebKit Commit Bot
Comment 9
2020-02-26 14:44:10 PST
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 10
2020-02-26 14:45:18 PST
<
rdar://problem/59822319
>
Kate Cheney
Comment 11
2020-04-16 08:45:36 PDT
***
Bug 207938
has been marked as a duplicate of this bug. ***
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug