Tests should each use a unique ResourceLoadStatistics file path for its database store https://bugs.webkit.org/show_bug.cgi?id=208206 <rdar://problem/59690272>

Reviewed by Brady Eidson.

Source/WebKit:

The ResourceLoadStatistics directory was being set to a non-unique
default value before being created at the temporary path generated by
WebKitTestRunner. This was causing crashes and concurrency issues in tests
when multiple database stores at the same path are accessed
simultaneously.

This patch updates WebProcessPool.cpp to treat the
resourceLoadStatisticsDirectory parameter like it does with IndexedDB
to avoid initializing multiple databases at the same file path.

* NetworkProcess/Classifier/ResourceLoadStatisticsDatabaseStore.cpp:
(WebKit::ResourceLoadStatisticsDatabaseStore::openAndDropOldDatabaseIfNecessary):
We should use SQLiteFileSystem::deleteDatabaseFile because it takes
care of additional SQLite files automatically.

* NetworkProcess/Classifier/WebResourceLoadStatisticsStore.cpp:
(WebKit::WebResourceLoadStatisticsStore::WebResourceLoadStatisticsStore):
(WebKit::WebResourceLoadStatisticsStore::populateMemoryStoreFromDisk):
Checks if the path is empty because we no longer
guarantee that the resourceLoadStatisticsDirectory is set. Also checks
if m_statisticsStore is initialized before trying to grandfather
statistics.

* UIProcess/WebProcessPool.cpp:
(WebKit::WebProcessPool::ensureNetworkProcess):
Checks if a default WebsiteDataStore exists before setting the
parameter to the default value. This way, the parameter is empty if
WebKitTestRunner hasn't yet set the temporary directory and we won't
create a new database.

Tools:

Initialize a default website data store before checking for the ITP
store to ensure the directory exists after the file has been deleted.

* TestWebKitAPI/Tests/WebKitCocoa/WebsiteDataStoreCustomPaths.mm:
(TEST):


Canonical link: https://commits.webkit.org/221214@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@257519 268f45cc-cd09-0410-ab3c-d52691b4dbfc